Completed Admin Page

--- a/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
+++ b/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
@@ -15,7 +15,7 @@
                 </nav>
             </div>
             <div class="col-lg-6 col-5 text-right">
-                @if (list_permission.Contains("Admin") || list_role.Contains("Admin"))
+                @if (list_permission.Contains("Company_Add") || list_role.Contains("Admin"))
                 {
     <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>}
 
