--- a/Areas/Admin/Views/RoleManagement/Edit.cshtml
+++ b/Areas/Admin/Views/RoleManagement/Edit.cshtml
@@ -23,7 +23,7 @@
                     {
                         if (item.Key_code == null)
                         {
-                            <div class="col-md-6">
+                            <div class="col-md-6" style="padding: 0px">
                                 <div class="panel panel-danger" style="padding:15px;margin-right:10px">
                                     <div class="panel-heading">
                                         <label>
@@ -53,9 +53,14 @@
                         }
 
                     }
-                    <button type="submit" style="margin-top:20px;margin-left:15px" class="btn btn-danger">Submit</button>
-                    <a style="margin-top:20px;margin-left:15px" class="btn btn-primary" href="/Admin/RoleManagement/RoleIndex">Back</a>
                 </div>
+                <div class="row">
+                    <div class="ml-auto" style="padding: 15px">
+                        <a style="margin-top:20px;margin-left:15px" class="btn btn-primary" href="/Admin/RoleManagement/RoleIndex">Back</a>
+                        <button type="submit" style="margin-top:20px;margin-left:15px" class="btn btn-danger">Submit</button>
+                    </div>
+                </div>
+                
             </form>
         </div>
 
