--- a/Areas/Admin/Views/RoleManagement/RoleIndex.cshtml
+++ b/Areas/Admin/Views/RoleManagement/RoleIndex.cshtml
@@ -2,28 +2,25 @@
 @{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml";
 }
 
-<div class="header bg-primary">
-    <div class="container-fluid">
-        <div class="header-body">
-            <div class="row align-items-center py-4">
-                <div class="col-lg-6 col-7">
-                    <h6 class="h2 text-white d-inline-block mb-0">Company</h6>
-                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                            <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="#">Tables</a></li>
-                        </ol>
-                    </nav>
-                </div>
-                <div class="col-lg-6 col-5 text-right">
-                    <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>
-                    <a class="btn btn-sm btn-neutral" href="/Admin/RoleManagement/RoleIndex">Reload</a>
-                </div>
+<div class="container" style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
+    <div class="header-body">
+        <div class="row align-items-center py-4">
+            <div class="col-lg-6 col-7">
+                <h6 class="h2 d-inline-block mb-0">Role</h6>
+                <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                    <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                        <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                        <li class="breadcrumb-item"><a href="#">Tables</a></li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="col-lg-6 col-5 text-right">
+                <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>
+                <a class="btn btn-sm btn-neutral" href="/Admin/RoleManagement/RoleIndex">Reload</a>
             </div>
         </div>
     </div>
 </div>
-
 <div class="container" style="margin-top: 30px;padding-bottom: 40px">
     <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
@@ -171,8 +168,8 @@
     <style>
         td {
             background-color: #172b4d;
-
         }
+
         th {
             color: #4d7bca
         }
