--- a/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
@@ -8,7 +8,7 @@
 </style>
 
 
-<nav class="navbar navbar-top navbar-expand" style="border-bottom: solid 2px; border-top: solid 2px">
+<nav class="navbar navbar-top navbar-expand" style="border-bottom: solid 2px;">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
