--- a/Views/Services/detailteam.cshtml
+++ b/Views/Services/detailteam.cshtml
@@ -5,6 +5,106 @@
 }
 
 @model IEnumerable<_ExcellOn_.Models.ResultTeam>
+
+
+<link href="~/Content/Manh/team/css/pe-icon-7-stroke.css" rel="stylesheet" />
+
+<!--     <link href='css/ct-navbar.css' rel='stylesheet' /> -->
+<link href='~/Content/Manh/team/css/rotating-card.css' rel='stylesheet' />
+
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+
+<link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<link href='~/Content/Manh/team/css/bootstrap.css' rel='stylesheet' />
+
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+@*<script src="~/Content/Manh/assets/js/bootstrap.min.js"></script>*@
+@*<style>
+        body {
+            margin-top: 100px;
+        }
+
+        .navbar-default .navbar-nav > li > a {
+            padding: 15px 15px;
+            margin: 5px 0;
+        }
+
+        .navbar-default {
+            padding: 10px 0;
+            background-color: rgba(255, 255, 255, 0.95);
+            border-color: transparent;
+            box-shadow: 0 0px 13px rgba(0,0,0,.2);
+        }
+
+        .btn-info,
+        .btn-info:hover,
+        .btn-info:focus {
+            color: #FFF !important;
+            background-color: #00bbff !important;
+            border-color: #00bbff !important;
+        }
+
+        .btn-info {
+            opacity: .8;
+            transition: all 0.1s;
+            -webkit-transition: all 0.1s;
+        }
+
+            .btn-info:hover,
+            .btn-info:focus {
+                opacity: 1;
+            }
+    </style>*@
+@*<section class="w3l-team py-5">
+        <div class="container py-md-5 py-4">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="section-heading text-center mb-sm-5 mb-4">
+                        <h3 class="title-style mb-2">Meet our lovely team</h3>
+                        <p class="lead">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
+                            eaque ipsa quae ab illo inventore.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center">
+                @foreach (var i in Model)
+                {
+                    <div class="col-md-4">
+                        <div class="team-block-single">
+                            <div class="team-grids">
+                                <a href="#team-single">
+                                    <a href="@Url.Action("DetailStaff","Services",new {id = i.id })"><img src="@i.avt" class="img-fluid" alt=""></a>
+                                    <div class="team-info">
+                                        <div class="social-icons-section">
+                                            <a class="fac" href="#facebook">
+                                                <span class="fa fa-facebook"></span>
+                                            </a>
+                                            <a class="twitter mx-2" href="#twitter">
+                                                <span class="fa fa-twitter"></span>
+                                            </a>
+                                            <a class="google" href="#google-plus">
+                                                <span class="fa fa-google-plus"></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="team-bottom-block p-4">
+
+                                <h5 class="member mb-1"><a href="@Url.Action("DetailStaff","Services",new {id = i.id })">@i.name</a></h5>
+                                <a href="@Url.Action("DetailStaff","Services",new {id = i.id })">
+                                    <small>@i.des</small>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                }
+                  </div>
+
+        </div>
+    </section>*@
 <section class="w3l-team py-5">
     <div class="container py-md-5 py-4">
         <div class="row justify-content-center">
@@ -12,46 +112,136 @@
                 <div class="section-heading text-center mb-sm-5 mb-4">
                     <h3 class="title-style mb-2">Meet our lovely team</h3>
                     <p class="lead">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
-                        eaque ipsa quae ab illo inventore.
+                        We are confident with our staff with many years of experience. We will definitely bring great experiences to customers.
                     </p>
                 </div>
             </div>
         </div>
-        <div class="row text-center">
-            @foreach (var i in Model)
+        <div class="col-sm-10 col-sm-offset-1">
+            @foreach (var i in Model.Take(3))
             {
-                <div class="col-md-4">
-                    <div class="team-block-single">
-                        <div class="team-grids">
-                            <a href="#team-single">
-                                <img src="~/Content/Manh/assets/images/@i.avt" class="img-fluid" alt="">
-                                <div class="team-info">
-                                    <div class="social-icons-section">
-                                        <a class="fac" href="#facebook">
-                                            <span class="fa fa-facebook"></span>
-                                        </a>
-                                        <a class="twitter mx-2" href="#twitter">
-                                            <span class="fa fa-twitter"></span>
-                                        </a>
-                                        <a class="google" href="#google-plus">
-                                            <span class="fa fa-google-plus"></span>
-                                        </a>
+                <div class="col-md-4 col-sm-6">
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="front">
+                                <div class="cover">
+                                    <img src="~/Content/Manh/team/images/rotating_card_thumb3.png" />
+                                </div>
+                                <div class="user">
+                                    <img class="img-circle" src="@i.avt" />
+                                </div>
+                                <div class="content">
+                                    <div class="main">
+                                        <h3 class="name">@i.name</h3>
+                                        <p class="profession">Senior Leader</p>
+                                        <p class="text-center"></p>
+                                    </div>
+                                    <div class="footer">
+                                        <i class="fa fa-mail-forward"></i> Auto Rotation
                                     </div>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">@i.name</a></h5>
-                            <small>@i.des</small>
-                        </div>
-                    </div>
+                            </div> <!-- end front panel -->
+                            <div class="back">
+                                <div class="header">
+                                    <h5 class="motto">"To be or not to be, this is my awesome motto!"</h5>
+                                </div>
+                                <div class="content">
+                                    <div class="main">
+                                        <h4 class="text-center">@i.name</h4>
+                                        <p class="text-center">@i.des</p>
+
+                                        <div class="stats-container">
+                                            <div class="stats">
+                                                <h4>235</h4>
+                                                <p>
+                                                    Followers
+                                                </p>
+                                            </div>
+                                            <div class="stats">
+                                                <h4>114</h4>
+                                                <p>
+                                                    Following
+                                                </p>
+                                            </div>
+                                            <div class="stats">
+                                                <h4>35</h4>
+                                                <p>
+                                                    Projects
+                                                </p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="footer">
+                                    <div class="social-links text-center">
+                                        <a href="https://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
+                                        <a href="https://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
+                                        <a href="https://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
+                                    </div>
+                                </div>
+                            </div> <!-- end back panel -->
+                        </div> <!-- end card -->
+                    </div> <!-- end card-container -->
                 </div>
-            }          
-              </div>
+            }
+
+
+
+
+        <div class="col-12 center">
             
-    </div>
+            @Html.Action("detailteam1")
+
+
+            
+        </div>
+        </div>
 </section>
+
+
+@*<div class="container">
+        <div class="row">
+            <h1 class="title">
+                This is our awesome team
+                <br>
+                <small>Present your team in an interesting way</small>
+            </h1>
+
+        </div>
+        <div class="space-200"></div>
+    </div>*@
+@*<script src="~/Content/Manh/team/js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="~/Content/Manh/team/js/bootstrap.min.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    $().ready(function () {
+        $('[rel="tooltip"]').tooltip();
+
+        $('a.scroll-down').click(function (e) {
+            e.preventDefault();
+            scroll_target = $(this).data('href');
+            $('html, body').animate({
+                scrollTop: $(scroll_target).offset().top - 60
+            }, 1000);
+        });
+
+    });
+
+    function rotateCard(btn) {
+        var $card = $(btn).closest('.card-container');
+        console.log($card);
+        if ($card.hasClass('hover')) {
+            $card.removeClass('hover');
+        } else {
+            $card.addClass('hover');
+        }
+    }
+
+
+</script>*@
+
+
 
 
 
