--- a/Views/Services/feedback.cshtml
+++ b/Views/Services/feedback.cshtml
@@ -1,6 +1,6 @@
 ﻿@using _ExcellOn_.Models
 @model IEnumerable<Customer>
-<section class="w3l-customer-block py-5">
+<section class="w3l-customer-block py-5" style="background-color:white">
     <div class="container py-md-5 py-4">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -18,7 +18,7 @@
                            @item.Customer_Comment
                         </blockquote>
                         <div class="customer-img d-flex align-items-center mt-4">
-                            <img src="~/Content/Manh/assets/images/@item.Customer_Avatar" class="img-fluid mr-3" alt="" />
+                            <img src="@item.Customer_Avatar" class="img-fluid mr-3" alt=""  style="width:10%"/>
                             <div class="customer-info">
                                 <h6>@item.Customer_Name</h6>
                                 <small class="mb-0">FeedBack</small>
