--- a/Views/Services/service.cshtml
+++ b/Views/Services/service.cshtml
@@ -5,37 +5,16 @@
 @model IEnumerable<Service>
 @{
     ViewBag.Title = "service";
-    Layout = null;
+    Layout = "~/Views/Shared/HomePage.cshtml";
 }
 
-<!doctype html>
-<html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
-    <!-- google-fonts -->
-    <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-          rel="stylesheet">
-    <!-- //google-fonts -->
-    <!-- Template CSS Style link -->
-    <link rel="stylesheet" href="~/Content/Manh/assets/css/style-starter.css">
-</head>
-
-
-<body>
-    <!--header-->
-  
-    <!--//header-->
-    <!-- inner banner -->
     <div class="inner-banner">
         <div class="w3l-breadcrumb">
             <div class="container">
                 <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">Top Quality Services</h4>
                 <ul class="breadcrumbs-custom-path">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span>Services</li>
                 </ul>
             </div>
@@ -51,7 +30,7 @@
                     <div class="col-lg-4 col-md-6 mt-md-0 mt-sm-5 mt-4">
                         <div class="service-single-grid">
                             <div class="service-image">
-                                <img src="~/Content/Manh/assets/images/@s.Service_Image" class="img-fluid" alt="">
+                                <img src="@s.Service_Image" class="img-fluid" alt="" width="300px" height="500px">
                             </div>
                             <div class="service-content p-4">
                                 <h5 class="mb-2"><a href="@Url.Action("detailservice","Services",new {id=s.Id})">@s.Service_Name</a></h5>
@@ -89,7 +68,7 @@
                             </li>
                             <li class="green">Or</li>
                             <li>
-                                <a href="contact.html" class="btn btn-style-white btn-style-primary">Get in touch</a>
+                                <a href="@Url.Action("Index","Contact")" class="btn btn-style-white btn-style-primary" style="background:red;color:white">Get in touch</a>
                             </li>
                         </ul>
                     </div>
@@ -97,248 +76,6 @@
             </div>
         </div>
     </section>
-    <!-- //call section -->
-    <!-- footer -->
-    <section class="w3l-footer-29-main">
-        <div class="footer-29 py-5">
-            <div class="container py-lg-4">
-                <div class="row footer-top-29">
-                    <div class="col-lg-9">
-                        <div class="row">
-                            <div class="col-md-3 col-6 footer-list-29">
-                                <ul>
-                                    <h6 class="footer-title-29">Company</h6>
-                                    <li><a href="services.html">About Our Services</a></li>
-                                    <li><a href="#call-center">Our Projects</a></li>
-                                    <li><a href="#blog">View Our Blog</a></li>
-                                    <li><a href="about.html">Check Our Careers</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-3 col-6 footer-list-29">
-                                <ul>
-                                    <h6 class="footer-title-29">Quick Links</h6>
-                                    <li><a href="#call-center">Management</a></li>
-                                    <li><a href="services.html">Department Services</a></li>
-                                    <li><a href="#call-center">Make Appointment</a></li>
-                                    <li><a href="about.html">Our Business Growth</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
-                                <ul>
-                                    <h6 class="footer-title-29">Support</h6>
-                                    <li><a href="#call-center">Live Chart</a></li>
-                                    <li><a href="#call-center">Faq's</a></li>
-                                    <li><a href="#call-center"> Support</a></li>
-                                    <li><a href="#call-center">Terms of Service</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
-                                <h6 class="footer-title-29">More Info</h6>
-                                <ul>
-                                    <li><a href="#privacy">Privacy Policy</a></li>
-                                    <li><a href="#terms"> Terms of Service</a></li>
-                                    <li><a href="contact.html">Contact us</a></li>
-                                    <li><a href="#support"> Support</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 footer-contact-list mt-lg-0 mt-md-5 mt-4">
-                        <h6 class="footer-title-29">Contact Info </h6>
-                        <ul>
-                            <li class="d-flex align-items-center py-2">
-                                <i class="fa fa-map-marker mr-2"
-                                   aria-hidden="true"></i>10001, 5th Avenue, USA
-                            </li>
-                            <li class="d-flex align-items-center py-2">
-                                <i class="fa fa-phone mr-2"
-                                   aria-hidden="true"></i><a href="tel:+12 23456790">
-                                    +12
-                                    23456790
-                                </a>
-                            </li>
-                            <li class="d-flex align-items-center py-2">
-                                <i class="fa fa-envelope mr-2"
-                                   aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //footer -->
-    <!-- copyright -->
-    <section class="w3l-copyright">
-        <div class="container">
-            <div class="row bottom-copies">
-                <p class="col-lg-8 copy-footer-29">
-                    © 2020 Call Center. All rights reserved. Design by <a href="https://w3layouts.com/" target="_blank">
-                        W3Layouts
-                    </a>
-                </p>
-                <div class="col-lg-4 text-right">
-                    <div class="main-social-footer-29">
-                        <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-                        <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-                        <a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                        <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-                        <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //copyright -->
-    <!-- Js scripts -->
-    <!-- move top -->
-    <button onclick="topFunction()" id="movetop" title="Go to top">
-        <span class="fa fa-level-up" aria-hidden="true"></span>
-    </button>
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () {
-            scrollFunction()
-        };
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("movetop").style.display = "block";
-            } else {
-                document.getElementById("movetop").style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-    <!-- //move top -->
-    <!-- common jquery plugin -->
-    <script src="~/Content/Manh/assets/js/jquery-3.3.1.min.js"></script>
-    <!-- //common jquery plugin -->
-    <!-- theme switch js (light and dark)-->
-    <script src="~/Content/Manh/assets/js/theme-change.js"></script>
-    <script>
-        function autoType(elementClass, typingSpeed) {
-            var thhis = $(elementClass);
-            thhis.css({
-                "position": "relative",
-                "display": "inline-block"
-            });
-            thhis.prepend('<div class="cursor" style="right: initial; left:0;"></div>');
-            thhis = thhis.find(".text-js");
-            var text = thhis.text().trim().split('');
-            var amntOfChars = text.length;
-            var newString = "";
-            thhis.text("|");
-            setTimeout(function () {
-                thhis.css("opacity", 1);
-                thhis.prev().removeAttr("style");
-                thhis.text("");
-                for (var i = 0; i < amntOfChars; i++) {
-                    (function (i, char) {
-                        setTimeout(function () {
-                            newString += char;
-                            thhis.text(newString);
-                        }, i * typingSpeed);
-                    })(i + 1, text[i]);
-                }
-            }, 1500);
-        }
-
-        $(document).ready(function () {
-            // Now to start autoTyping just call the autoType function with the
-            // class of outer div
-            // The second paramter is the speed between each letter is typed.
-            autoType(".type-js", 200);
-        });
-    </script>
-    <!-- //theme switch js (light and dark)-->
-    <!-- magnific popup -->
-    <script src="~/Content/Manh/assets/js/jquery.magnific-popup.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.popup-with-zoom-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: false,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-zoom-in'
-            });
-
-            $('.popup-with-move-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: false,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-slide-bottom'
-            });
-        });
-    </script>
-    <!-- //magnific popup -->
-    <!-- MENU-JS -->
-    <script>
-        $(window).on("scroll", function () {
-            var scroll = $(window).scrollTop();
-
-            if (scroll >= 80) {
-                $("#site-header").addClass("nav-fixed");
-            } else {
-                $("#site-header").removeClass("nav-fixed");
-            }
-        });
-
-        //Main navigation Active Class Add Remove
-        $(".navbar-toggler").on("click", function () {
-            $("header").toggleClass("active");
-        });
-        $(document).on("ready", function () {
-            if ($(window).width() > 991) {
-                $("header").removeClass("active");
-            }
-            $(window).on("resize", function () {
-                if ($(window).width() > 991) {
-                    $("header").removeClass("active");
-                }
-            });
-        });
-    </script>
-    <!-- //MENU-JS -->
-    <!-- disable body scroll which navbar is in active -->
-    <script>
-        $(function () {
-            $('.navbar-toggler').click(function () {
-                $('body').toggleClass('noscroll');
-            })
-        });
-    </script>
-    <!-- //disable body scroll which navbar is in active -->
-    <!--bootstrap-->
-    <script src="~/Content/Manh/assets/js/bootstrap.min.js"></script>
-    <!-- //bootstrap-->
-    <!-- //Js scripts -->
-</body>
-
-</html>
 
 
