Change css for some table

--- a/Areas/Admin/Views/CustomerManagement/CustomerIndex.cshtml
+++ b/Areas/Admin/Views/CustomerManagement/CustomerIndex.cshtml
@@ -196,11 +196,9 @@
             <tr>
                 <td><input onclick="checkItem(this)" type="checkbox" name="sendEmail" value="@item.Customer_Email" /></td>
                 <th>
-                    <div class="media align-items-center">
-                        <a href="#" class="avatar rounded-circle mr-3">
-                            <img alt="Image placeholder" src="@item.Customer_Avatar">
-                        </a>
-                    </div>
+                    <a href="#" class="avatar rounded-circle">
+                        <img alt="Image placeholder" src="@item.Customer_Avatar">
+                    </a>
                 </th>
                 <td>
                     @item.Customer_Name
