--- a/Areas/Admin/Views/UserManagement/Edit.cshtml
+++ b/Areas/Admin/Views/UserManagement/Edit.cshtml
@@ -37,7 +37,7 @@
                                 <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                                     <div>
                                         <span class="heading">@Model.User_Age</span>
-                                        <span class="description">My Age</span>
+                                        <span class="description">Age</span>
                                     </div>
                                     <div>
                                         <span class="heading">@Model.UserRoles.Count</span>
@@ -45,7 +45,7 @@
                                     </div>
                                     <div>
                                         <span class="heading">@Model.Id</span>
-                                        <span class="description">Code</span>
+                                        <span class="description">Code (ID)</span>
                                     </div>
                                 </div>
                             </div>
