--- a/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
+++ b/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
@@ -159,7 +159,7 @@
                 <th>
                     <div class="media align-items-center">
                         <a href="#" class="avatar rounded-circle mr-3">
-                            <img alt="Image placeholder" src="~/Areas/Admin/Public/img/theme/bootstrap.jpg">
+                            <img alt="Image placeholder" src="~/Public/Image/building.jpg">
                         </a>
                         <div class="media-body">
                             <span class="name mb-0 text-sm">@item.Company_Name</span>
